--- a/app/dashboardexp/cererilemele/cererilemele.css
+++ b/app/dashboardexp/cererilemele/cererilemele.css
@@ -1,13 +1,13 @@
+/* FOR BAR */
 @import url('https://fonts.googleapis.com/css?family=Work+Sans:400,600');
-body {
+/* body {
 	margin: 0;
 	background: rgb(122, 121, 121);
-	font-family: 'Work Sans', sans-serif;
 	font-weight: 800;
-}
+} */
 
 .container {
-	width: 80%;
+	width: 1535px;
 	margin: 0 auto;
 }
 
@@ -24,6 +24,7 @@ header::after {
 .logo {
   float: left;
   padding: 10px 0;
+  padding-left: 50px;
 }
 
 nav {
@@ -32,7 +33,7 @@ nav {
 
 nav ul {
   margin: 0;
-  padding: 0;
+  padding-right: 50px;
   list-style: none;
 }
 
@@ -40,7 +41,6 @@ nav li {
   display: inline-block;
   margin-left: 70px;
   padding-top: 30px;
-
   position: relative;
 }
 
@@ -70,4 +70,20 @@ nav a::before {
 
 nav a:hover::before {
   width: 100%;
+}
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
 }
