--- a/app/dashboardexp/cereri/cereri.css
+++ b/app/dashboardexp/cereri/cereri.css
@@ -1,10 +1,10 @@
 /* FOR BAR */
 @import url('https://fonts.googleapis.com/css?family=Work+Sans:400,600');
-/* body {
+body {
 	margin: 0;
-	background: rgb(122, 121, 121);
+  background-color: #adacac;
 	font-weight: 800;
-} */
+}
 
 .container {
 	width: 1535px;
