--- a/app/dashboardexp/cererilemele/cererilemele.css
+++ b/app/dashboardexp/cererilemele/cererilemele.css
@@ -72,18 +72,96 @@ nav a:hover::before {
   width: 100%;
 }
 
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
+/* FOR TABLE */
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body{
   width: 100%;
+  display: flex;
+  justify-content: center;
+  font-family: 'Roboto', sans-serif;
+  background-color: #adacac;
 }
 
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
+table{
+  overflow-y:scroll;
+  height:500px;
+  display:block;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border-collapse: collapse;
 }
 
-tr:nth-child(even) {
-  background-color: #dddddd;
+.header_fixed{
+  height: 500px;
+  overflow: auto;
+  margin-top: 30px;
+}
+.header_fixed thead th{
+  position: sticky;
+  top: 0;
+  background-color: black;
+  color: #E6E7E8;
+  font-size: 15px;
+}
+
+th,td{
+  border-bottom: 1px solid #dddddd;
+  padding: 10px 20px;
+  font-size: 14px;
+}
+
+tr:nth-child(even){
+  background-color: #cacaca;
+}
+tr:nth-child(odd){
+  background-color: #EDEEF1;
+}
+
+::-webkit-scrollbar{
+  width: 6px;
+}
+
+::-webkit-scrollbar-track{
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3)
+}
+
+::-webkit-scrollbar-thumb{
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3)
+}
+
+#addCerere {
+   /* width: 30%;
+  background-color: #55d6aa;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: 80px; */
+  margin-top: 80px;
+    margin-left: 40%;
+    width: 300px;
+    height: 30px;
+    border: none;
+    border-radius: 4px;
+    padding: 0;
+    color: black;
+    background-color: #55d6aa;
+}
+
+#addCerere:hover {
+  background-color: rgba(250, 246, 246, 0.726);
+}
+#addCerere:active {
+  background-color: rgba(250, 246, 246, 0.726);
+  box-shadow: 0 4px rgb(126, 126, 126);
+  transform: translateY(4px);
 }
