--- a/app/dashboardtrans/camioane/camioane.css
+++ b/app/dashboardtrans/camioane/camioane.css
@@ -84,9 +84,9 @@ body{
 }
 
 table{
-    overflow-y:scroll;
-    height:500px;
     display:block;
+    max-height:500px;
+    overflow-y:scroll;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -125,11 +125,11 @@ tr:nth-child(odd){
 }
 
 ::-webkit-scrollbar-track{
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3)
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 }
 
 ::-webkit-scrollbar-thumb{
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3)
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 }
 
 #addTruck{
