--- a/app/dashboardtrans/listacereri/listacereri.css
+++ b/app/dashboardtrans/listacereri/listacereri.css
@@ -84,9 +84,9 @@ body{
 }
 
 table{
-    overflow-y:scroll;
-    height:500px;
-    display:block;
+    display: block;
+    max-height: 500px;
+    overflow-y: scroll;
     position: absolute;
     left: 50%;
     top: 50%;
