--- a/app/dashboardadmin/conturi/conturi.css
+++ b/app/dashboardadmin/conturi/conturi.css
@@ -136,7 +136,7 @@ tr:nth-child(odd){
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3)
 }
 
-/* #addCerere {
+ #addUser {
    /* width: 30%;
   background-color: #55d6aa;
   color: white;
@@ -157,10 +157,10 @@ tr:nth-child(odd){
     background-color: #55d6aa;
 }
 
-#addCerere:hover {
+#addUser:hover {
   background-color: rgba(250, 246, 246, 0.726);
 }
-#addCerere:active {
+#addUser:active {
   background-color: rgba(250, 246, 246, 0.726);
   box-shadow: 0 4px rgb(126, 126, 126);
   transform: translateY(4px);
