Add edit user feature

--- a/app/dashboardadmin/conturi/conturi.css
+++ b/app/dashboardadmin/conturi/conturi.css
@@ -164,4 +164,4 @@ tr:nth-child(odd){
   background-color: rgba(250, 246, 246, 0.726);
   box-shadow: 0 4px rgb(126, 126, 126);
   transform: translateY(4px);
-} */
+}
